[gd_scene load_steps=12 format=3 uid="uid://b2ype4ks6wd5x"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_r4lc0"]
[ext_resource type="PackedScene" uid="uid://vq2ju3qo2hr3" path="res://scenes/player/movement_manager.tscn" id="2_pu5br"]
[ext_resource type="PackedScene" uid="uid://cb2rwntd2s065" path="res://scenes/player/weapon_manager.tscn" id="3_tefss"]
[ext_resource type="AudioStream" uid="uid://cm5ggv3fiaybt" path="res://audio/sfx/footstep1.ogg" id="4_2h2ys"]
[ext_resource type="PackedScene" uid="uid://c3us3eqr73duv" path="res://scenes/ui/hud.tscn" id="4_24bxq"]
[ext_resource type="PackedScene" uid="uid://cuh2x6gk3mlgn" path="res://scenes/player/building_manager.tscn" id="4_krkao"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="6_qphh4"]
[ext_resource type="Script" path="res://scripts/player/states/combat.gd" id="7_3f0ng"]
[ext_resource type="Script" path="res://scripts/player/states/build.gd" id="9_j2vn2"]
[ext_resource type="Script" path="res://scripts/player/states/dead.gd" id="10_ubdox"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_n32ka"]
radius = 0.35
height = 1.75

[node name="Player" type="CharacterBody3D"]
editor_description = "The character controlled by the player."
collision_mask = 58
platform_floor_layers = 50
script = ExtResource("1_r4lc0")
footstep_sound = ExtResource("4_2h2ys")

[node name="AimPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="MovementManager" parent="." instance=ExtResource("2_pu5br")]

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="MainCamera" type="Camera3D" parent="Pivot"]
cull_mask = 524287
current = true
fov = 90.0

[node name="WeaponCamera" type="Camera3D" parent="Pivot"]
cull_mask = 524288
fov = 60.0
size = 1.906

[node name="WeaponManager" parent="Pivot/WeaponCamera" node_paths=PackedStringArray("weapon_manager_owner") instance=ExtResource("3_tefss")]
weapon_manager_owner = NodePath("../../..")

[node name="BuildingManager" parent="Pivot/WeaponCamera" instance=ExtResource("4_krkao")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("CapsuleShape3D_n32ka")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(640, 480)
render_target_update_mode = 4

[node name="Hud" parent="CanvasLayer" instance=ExtResource("4_24bxq")]

[node name="FootstepAudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_2h2ys")
bus = &"SFX"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_qphh4")
initial_state = NodePath("Build")

[node name="Combat" type="Node" parent="StateMachine"]
script = ExtResource("7_3f0ng")

[node name="Build" type="Node" parent="StateMachine"]
script = ExtResource("9_j2vn2")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("10_ubdox")
